service-apis/ingress/sample-ingress-apps.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-ingress-svc
spec:
  type: NodePort
  ports:
  - name: "http-port"
    protocol: "TCP"
    port: 8080
    targetPort: 80
  selector:
    ingress-app: sample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-ingress-apps
spec: 
  replicas: 3
  selector:
    matchLabels:
      ingress-app: sample
  template:
    metadata:
      labels:
        ingress-app: sample
    spec:
      containers:
      - name: nginx-container
        image: yuh6513/web-server:1.0
      - name: api-container
        image: yuh6513/api-server:1.0
